# dark-nefrito

./: Cargo.toml  README.md  build.rs
data/: dark-souls.json
src/: interpreter.rs  main.rs  models.rs  repository.rs
src/commands/: mod.rs  voice.rs
