[package]
name = "alma-negra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.37"
lazy_static = "1.4.0"
tracing-subscriber = "0.3.17"
tracing-futures = "0.2"
dotenv = "0.15"
serde = "1.0"
serde_json = "1.0.100"
vosk = "0.2.0"
hound = "1.1.0"

[dependencies.tokio]
version = "1.21.2"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.songbird]
songbird = "0.3.2"
features = ["builtin-queue"]

[dependencies.serenity]
version = "0.11"
features = ["client", "standard_framework", "voice", "rustls_backend", "cache"]
