[package]
name = "alma-negra"
version = "0.1.0"
edition = "2021"

[dependencies]
dashmap = "5.5.3"
once_cell = "1.8.0"
tracing = "0.1.37"
lazy_static = "1.4.0"
tracing-subscriber = "0.3.17"
tracing-futures = "0.2"
dotenv = "0.15"
serde = "1.0"
serde_json = "1.0.100"
vosk = "0.2.0"
hound = "3.5.1"

[dependencies.tokio]
version = "1.21.2"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.songbird]
songbird = "0.3.2"
features = ["builtin-queue", "receive"]

[dependencies.serenity]
version = "0.12.0-rc"
features = ["client", "standard_framework", "voice", "rustls_backend"]
